--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,61 @@
-body { background-color: yellow
-	;
+* {
+	padding: 0;
+	margin: 0;
+	font-family: 'Roboto Mono', monospace;
+}
+body {
+	background-color: white;
+}
+#main-section { 
+background-color: grey;
+}
+
+.about {
+	width: 60%;
+	/*margin: 0 auto;*/
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+}
+
+.my-picture { 
+	height: 150px;
+	padding: 3px;
+	border-radius: 50%;
+	border-style: solid;
+	border-color: white;
+	border-width: 5px;
+}
+
+h1 {
+	color: #fff;
+	font-size: 50px;
+	font-weight: normal;
+}
+
+#dev-description {
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+
+#portfolio-section {
+background-color: orange;
+}
+
+#skills-section {
+	background-color: yellow;
+}
+
+#about-section {
+	background-color: blue;
+}
+
+#main-section,
+#portfolio-section,
+#skills-section,
+#about-section {
+	height:100vh;
 }
