--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 * {
 	padding: 0;
 	margin: 0;
-	font-family: 'Roboto Mono', monospace;
+	font-family: 'IBM Plex Serif', serif;
 }
 body {
 	background-color: white;
@@ -32,7 +32,7 @@ background-color: grey;
 
 h1 {
 	color: #fff;
-	font-size: 50px;
+	font-size: 75px;
 	font-weight: normal;
 }
 
@@ -44,6 +44,19 @@ h1 {
 #portfolio-section {
 background-color: orange;
 }
+
+section#main-section > a { 
+	color: white;
+	text-decoration: none;
+	padding: 10px;
+	display: block;
+	 }
+
+	 a[href="https://github.com/gabebulatao"] {
+	 	position: absolute;
+	 	top: 0;
+	 	right: 0;
+	 }
 
 #skills-section {
 	background-color: yellow;
